tests/parsing/smtlib/v2.7/errors/022_var_binding_list_unclosed_2.smt2
(set-logic ALL)
(assert (let ((x 42) foo) (= x 1)))
